@@ -103,6 +103,7 @@ where XXXXXX is the bug number as listed below.
 342063  wrong format specifier for test mcblocklistsearch in gdbserver_tests
 342221  socket connect false positive uninit memory for unknown af family
 342795  Internal glibc __GI_mempcpy call should be intercepted
+343012  Unhandled syscall 319 (memfd_create)
 n-i-bz  Provide implementations of certain compiler builtins to support
         compilers who may not provide those
 n-i-bz  Old STABS code is still being compiled, but never used. Remove it.
